<resources>
    <string name="app_name">WeatherForecastApp</string>
    <string name="today">Today</string>
    <string name="wind_blow">Wind Blow</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="forecast">Forecast</string>
    <string name="section">Section</string>
    <string name="clear">Clear</string>
    <string name="time">Time</string>
    <string name="_30">30</string>
</resources>