<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardBackgroundColor="?colorSecondary"
    app:cardCornerRadius="20dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp">
            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompat="@drawable/ic_light_mode_black_24dp" />
            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@+id/iconImageView"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/timeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="2dp"
                    android:text="@string/time"
                    android:textColor="?colorOnPrimary"
                    android:textSize="24sp"
                    android:fontFamily="@font/productsans"/>

                <TextView
                    android:id="@+id/mainTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/clear"
                    android:textColor="?colorOnPrimary"
                    android:textSize="18sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/tempTextView"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="19dp"
                android:text="@string/_30"
                android:fontFamily="@font/productsans"
                android:textColor="@color/light_blue"
                android:textSize="40sp"
                android:textStyle="bold" />
        </RelativeLayout>

</androidx.cardview.widget.CardView>