<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/productsans"
        android:text="@string/today"
        android:textColor="?colorOnPrimary"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:cardBackgroundColor="?colorPrimaryVariant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="260dp"
                android:layout_marginStart="52dp"
                android:layout_marginEnd="52dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/mainTempTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/productsans"
                android:textColor="?colorOnPrimary"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.493"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                tools:text="32C" />

            <TextView
                android:id="@+id/cityNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/productsans"
                android:textColor="?colorOnPrimary"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mainTempTextView"
                tools:text="City" />

            <TextView
                android:id="@+id/weatherDescTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/productsans"
                android:textColor="?colorOnPrimary"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cityNameTextView"
                tools:text="Sunny" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="180dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="100dp"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="?colorSecondary"
                app:cardElevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/darker_white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/humidityImageView"
                        app:layout_constraintStart_toEndOf="@id/pressureImageView"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/windBlowTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="33dp"
                        android:fontFamily="@font/productsans"
                        android:text="@string/wind_blow"
                        android:textColor="?colorOnPrimary"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/icon_wind"
                        app:layout_constraintStart_toStartOf="@+id/icon_wind" />

                    <ImageView
                        android:id="@+id/icon_wind"
                        android:layout_width="43dp"
                        android:layout_height="39dp"
                        android:layout_marginTop="14dp"
                        android:layout_marginBottom="14dp"
                        app:layout_constraintBottom_toTopOf="@+id/windBlowTextView"
                        app:layout_constraintEnd_toStartOf="@+id/view1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/speedTextView"
                        app:srcCompat="@drawable/ic_air_black_24dp" />

                    <TextView
                        android:id="@+id/speedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="27dp"
                        android:fontFamily="@font/productsans"
                        android:textColor="@color/light_blue"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="@+id/icon_wind"
                        app:layout_constraintStart_toStartOf="@+id/icon_wind"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="99" />

                    <View
                        android:id="@+id/view1"
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/darker_white"
                        app:layout_constraintEnd_toStartOf="@id/pressureImageView"
                        app:layout_constraintStart_toEndOf="@id/icon_wind"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/pressureImageView"
                        android:layout_width="43dp"
                        android:layout_height="39dp"
                        android:layout_marginBottom="14dp"
                        app:layout_constraintBottom_toTopOf="@+id/PressureText"
                        app:layout_constraintEnd_toStartOf="@+id/view2"
                        app:layout_constraintStart_toEndOf="@+id/view1"
                        app:srcCompat="@drawable/ic_device_thermostat_black_24dp" />

                    <TextView
                        android:id="@+id/PressureText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="33dp"
                        android:fontFamily="@font/productsans"
                        android:text="@string/pressure"
                        android:textColor="?colorOnPrimary"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/pressureImageView"
                        app:layout_constraintStart_toStartOf="@+id/pressureImageView" />

                    <TextView
                        android:id="@+id/pressureTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="27dp"
                        android:fontFamily="@font/productsans"
                        android:textColor="@color/light_blue"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="@+id/pressureImageView"
                        app:layout_constraintStart_toStartOf="@+id/pressureImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="99" />

                    <ImageView
                        android:id="@+id/humidityImageView"
                        android:layout_width="43dp"
                        android:layout_height="39dp"
                        android:layout_marginBottom="14dp"
                        app:layout_constraintBottom_toTopOf="@+id/humidityText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/view2"
                        app:srcCompat="@drawable/ic_water_drop_black_24dp" />

                    <TextView
                        android:id="@+id/humidityText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="33dp"
                        android:fontFamily="@font/productsans"
                        android:text="@string/humidity"
                        android:textColor="?colorOnPrimary"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/humidityImageView"
                        app:layout_constraintStart_toStartOf="@+id/humidityImageView" />

                    <TextView
                        android:id="@+id/humidityTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="27dp"
                        android:fontFamily="@font/productsans"
                        android:textColor="@color/light_blue"
                        android:textSize="25sp"
                        app:layout_constraintEnd_toEndOf="@+id/humidityImageView"
                        app:layout_constraintStart_toStartOf="@+id/humidityImageView"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="99" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="73dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_share_black_24dp"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="73dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:background="?colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings_black_24dp"
        tools:ignore="SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>